force-app/main/default/objects/Agent__c/fields/Current_Shipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Shipment_Count__c</fullName>
    <description>Count of shipments currently assigned to this agent. Updated via trigger since Lookup relationships don't support rollup summary fields.</description>
    <label>Current Shipment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>