force-app/main/default/objects/Agent__c/fields/Max_Concurrent_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Max_Concurrent_Shipments__c</fullName>
    <description>Maximum number of shipments this agent can handle concurrently</description>
    <label>Max Concurrent Shipments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>