force-app/main/default/objects/Agent__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Galactic region assigned to this agent</description>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha Quadrant</fullName>
                <default>true</default>
                <label>Alpha Quadrant</label>
            </value>
            <value>
                <fullName>Beta Quadrant</fullName>
            </value>
            <value>
                <fullName>Gamma Quadrant</fullName>
            </value>
            <value>
                <fullName>Delta Quadrant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>