force-app/main/default/objects/Agent__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User record associated with this agent</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>IFTC Agents</relationshipLabel>
    <relationshipName>IFTC_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>